# text_search_engine

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yml  es_index_create.py  insert_source.py  prestart.sh  pyproject.toml
app/: actions.py  config.py  db.py  main.py  models.py  schemas.py
app/db/: __init__.py  base.py  session.py
migrations/: env.py
migrations/versions/: b6176f6b71cd_create_table.py  d46d5a4cb846_create_post_table.py
